[tool.poetry]
name = "advent"
version = "0.1.0"
description = "Repository for my code for Advent of Code"
authors = ["Jonas Renault <jonasrenault@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/jonasrenault/advent#readme"
repository = "https://github.com/jonasrenault/advent"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
requests = "^2.32.3"
tqdm = "^4.67.0"
z3-solver = "^4.13.3.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
black = "^24.10.0"
ruff = "^0.7.4"
mypy = "^1.13.0"
click = "^8.1.7"
jinja2 = "^3.1.4"
pytest = "^8.3.3"


[tool.poetry.group.stubs.dependencies]
types-requests = "^2.32.0.20241016"
types-tqdm = "^4.67.0.20241119"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 90
target_version = ['py312']

[tool.ruff]
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    "templates",
]
lint.ignore = []
line-length = 90
lint.select = [
    "E",
    "F",
    "W",
    "I001",
]
src = ["advent", "tests"]

[tool.ruff.lint.isort]
known-first-party = ["advent"]

[tool.mypy]
files = ["advent"]
exclude = ["templates"]

[[tool.mypy.overrides]]
module = "z3.*"
ignore_missing_imports = true
