[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "advent"
version = "1.0.0"
description = "Repository for my code for Advent of Code"
authors = [
    {name = "Jonas Renault", email =  "jonasrenault@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "numpy>=2.3.4",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "typer>=0.20.0",
    "z3-solver>=4.15.4.0",
]

[project.urls]
"Homepage" = "https://github.com/jonasrenault/advent#readme"
"Repository" = "https://github.com/jonasrenault/advent"

[project.scripts]
advent = "advent.utils.cli:app"

[project.optional-dependencies]
stubs = [
    "types-requests>=2.32.4.20250913",
    "types-tqdm>=4.67.0.20250809",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
    "pytest>=9.0.1",
    "ruff>=0.14.4",
]

[tool.black]
line_length = 90
target_version = ['py312']

[tool.ruff]
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    "templates",
]
lint.ignore = []
lint.select = [
    "E",
    "F",
    "W",
    "I001",
]
line-length = 90
src = ["advent", "tests"]

[tool.ruff.lint.isort]
known-first-party = ["advent"]

[tool.mypy]
files = ["advent"]
exclude = ["templates"]

[[tool.mypy.overrides]]
module = "z3.*"
ignore_missing_imports = true
